Fixed aside images on mobile

--- a/_sass/_columns.sass
+++ b/_sass/_columns.sass
@@ -34,11 +34,10 @@
   img
     object-fit: cover
 
-@media (min-width: 727px)
-  img.aside
-    object-fit: cover
-    height: 95vh
-    min-height: 100%
+img.aside
+  object-fit: cover
+  height: 95vh
+  min-height: 100%
 
 .columns li h3,
 .columns li h4,
